fix offcenter logo

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,18 +13,23 @@ body {
 	background-color: rgb(200, 200, 200);
 	color: white;
 }
+
 .header-container {
 	position: relative;
 	display: inline-flex;
 	padding: 1rem;
 	font-size: 4em;
+
 	.header {
 		z-index: 20;
+		margin-left: 20px;
+
 		.x {
 			color: black;
 			font-size: 1em;
 			opacity: 100%;
 		}
+
 		span {
 			font-size: xx-large;
 			opacity: 69%;
@@ -50,10 +55,4 @@ body {
 		z-index: 10;
 		display: inline-flex;
 	}
-}
-
-h2 {
-	position: relative;
-	display: inline-flex;
-	font-size: xx-large;
 }
